QMAPS-720 fix modal z-index

--- a/src/scss/includes/z_index.scss
+++ b/src/scss/includes/z_index.scss
@@ -7,11 +7,11 @@
 }
 
 .modal_overlay {
-  z-index: 3;
+  z-index: 5;
 }
 
 .modal {
-  z-index: 3;
+  z-index: 5;
 }
 
 .favorite_panel__item__more {
